GLOBAL: human vertical align to fix quite bad machine one

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ summary::-webkit-details-marker {
 	width: 1em;
 	display: inline-block;
 	vertical-align: middle;
+	margin-bottom: .15em; /* vertical align isn't perfect */
 }
 .menu-btn {
 	color: var(--foreground);
